--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,15 +2,15 @@
   "name": "mobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
-"scripts": {
-  "dev": "expo start",
-  "start": "expo start",
-  "reset-project": "node ./scripts/reset-project.js",
-  "android": "expo start --android",
-  "ios": "expo start --ios",
-  "web": "expo start --web",
-  "lint": "expo lint"
-},
+  "scripts": {
+    "dev": "expo start",
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "expo lint"
+  },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
