--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -19,8 +19,7 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.mobile"
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "output": "static",
