--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
+    "android-wireless": "adb connect 192.168.4.219:37451 && npx expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
