--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -44,14 +44,15 @@
     "react-native-svg": "15.12.1",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "tailwindcss": "^4.1.14"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/dom-to-image": "^2.6.7",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   },
   "private": true
