--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -52,6 +52,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   },
