--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -40,7 +40,8 @@
           }
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-video"
     ],
     "experiments": {
       "typedRoutes": true,
